--- a/pages/18807.html
+++ b/pages/18807.html
@@ -1046,6 +1046,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/Lamb+shift'>Lamb shift</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/quantum+harmonic+oscillator'>harmonic oscillator</a></p>
 </li>
 
@@ -1071,14 +1075,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 30, 2017 05:49:49 
+  Revised on December 18, 2017 09:44:21 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.92.170)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/hydrogen+atom" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hydrogen+atom/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/hydrogen+atom" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hydrogen+atom" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/hydrogen+atom" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hydrogen+atom/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/hydrogen+atom" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hydrogen+atom" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
