--- a/pages/6321.html
+++ b/pages/6321.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1234,6 +1234,12 @@ margin-left: 0em;
 <li><em>Tests of QED</em> (<a href='http://edu.itp.phys.ethz.ch/hs10/ppp1/PPP1_6.pdf'>pdf</a>)</li>
 </ul>
 
+<p>Specifically via the <a class='existingWikiWord' href='/nlab/show/Lamb+shift'>Lamb shift</a>:</p>
+
+<ul>
+<li>Savely G. Karshenboim, D. I. Mendeleev, <em>The Lamb Shift of Hydrogen and Low-Energy Tests of QED</em> (<a href='https://arxiv.org/abs/hep-ph/9411356'>arXiv:hep-ph/9411356</a>)</li>
+</ul>
+
 <p>
  
  
@@ -1241,14 +1247,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 18, 2017 07:03:02 
+  Revised on December 18, 2017 09:37:50 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.92.170)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
