--- a/pages/9177.html
+++ b/pages/9177.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -319,7 +319,7 @@ margin-left: 0em;
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li>
@@ -339,13 +339,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p><strong>scalar bosons</strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>, <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflaton</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a>)</li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>)</p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>, <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac fields</a>)</p>
 
 <ul>
 <li>
@@ -358,6 +358,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/muon'>muon</a></p>
 </li>
 </ul>
 
@@ -395,7 +399,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> (<a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a>)</p>
 </li>
 
 <li>
@@ -421,10 +425,6 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></p>
-</li>
-
-<li>
 <p><a class='existingWikiWord' href='/nlab/show/monopole'>monopole</a></p>
 </li>
 
@@ -432,29 +432,65 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/dual+graviton'>dual graviton</a></p>
 </li>
 </ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/auxiliary+field'>auxiliary fields</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost field</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/antifield'>antifield</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>, <a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></p>
+</li>
+</ul>
 </div>
 </div>
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The <em>electron</em> is one of the fundamental <a class='existingWikiWord' href='/nlab/show/particle'>particles</a>/<a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/hydrogen+atom'>hydrogen atom</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lamb+shift'>Lamb shift</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a></p>
+</li>
+</ul>
 
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on September 30, 2017 12:40:50 
+  Revised on December 18, 2017 09:48:43 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.50.90)
+  (94.220.92.170)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/electron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electron/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/electron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/electron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electron/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/electron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
