--- a/pages/18855.html
+++ b/pages/18855.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      topological recursion in nLab
+      Gaëtan Borot in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      topological recursion
+      Gaëtan Borot
   </h1>
 
 
@@ -308,127 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#original_articles'>Original articles</a></li><li><a href='#review_and_exposition'>Review and exposition</a></li><li><a href='#relation_to_topological_string_and_mirror_symmetry'>Relation to topological string and mirror symmetry</a></li></ul></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>Topological recursion (<a href='#ChekhovEynardOrantin06'>Chekhov-Eynard-Orantin 06</a>,<a href='#EynardOrantin07'>Eynard-Orantin 07</a>) is a universal <a class='existingWikiWord' href='/nlab/show/recursion'>recursion</a> formula that controls asymptotic expansion of many <a class='existingWikiWord' href='/nlab/show/integrable+system'>integrable systems</a> such as <a class='existingWikiWord' href='/nlab/show/matrix+model'>matrix models</a>.</p>
-
-<p><a class='existingWikiWord' href='/nlab/show/Maxim+Kontsevich'>Maxim Kontsevich</a> and <a class='existingWikiWord' href='/nlab/show/Yan+Soibelman'>Yan Soibelman</a> reformulated and slightly generalised it, seeing it as a <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a> of certain quadratic Lagrangians in the <a class='existingWikiWord' href='/nlab/show/cotangent+bundle'>cotangent bundle</a> of some <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> (reviewed in <a href='#AndersenBorotChekhovOrantin17'>Andersen-Borot-Chekhov-Orantin 17, section 2</a>).</p>
-
-<p>There is some deep relation to the <a class='existingWikiWord' href='/nlab/show/topological+string'>topological string</a> <a class='existingWikiWord' href='/nlab/show/B-model'>B-model</a> and <a class='existingWikiWord' href='/nlab/show/Gromov-Witten+invariants'>Gromov-Witten invariants</a> (<a href='#BouchardKlemmMarinoPasquetti09'>Bouchard-Klemm-Marino-Pasquetti 09</a>). It yields proofs of <a class='existingWikiWord' href='/nlab/show/mirror+symmetry'>mirror symmetry</a> in certain cases, valid at all <a class='existingWikiWord' href='/nlab/show/genus+of+a+surface'>genera</a> (<a href='#EynardOrantin12'>Eynard-Orantin 12</a>,<a href='#FangLiuZong13'>Fang-Liu-Zong 13</a>).</p>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/spectral+curve'>spectral curve</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/matrix+model'>matrix model</a></p>
-</li>
+    <ul>
+<li><a href='http://people.mpim-bonn.mpg.de/gborot/home'>webpage</a></li>
 </ul>
 
-<h2 id='references'>References</h2>
-
-<h3 id='original_articles'>Original articles</h3>
-
-<p>The method was introduced in</p>
+<h3 id='related_entries'>Related entries</h3>
 
 <ul>
-<li id='ChekhovEynardOrantin06'>
-<p><a class='existingWikiWord' href='/nlab/show/Leonid+Chekhov'>Leonid Chekhov</a>, <a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, <em>Free energy topological expansion for the 2-matrix model</em>, JHEP 0612:053,2006 (<a href='https://arxiv.org/abs/math-ph/0603003'>arXiv:math-ph/0603003</a>)</p>
-</li>
-
-<li id='EynardOrantin07'>
-<p><a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, <em>Invariants of algebraic curves and topological expansion</em> (<a href='https://arxiv.org/abs/math-ph/0702045'>arXiv:math-ph/0702045</a>)</p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/topological+recursion'>topological recursion</a></li>
 </ul>
 
-<h3 id='review_and_exposition'>Review and exposition</h3>
-
-<p>Review and exposition includes</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, <em>Topological recursion in random matrices and enumerative geometry</em>, J. Phys. A: Mathematical and Theoretical , 42(29), 2009 (<a href='https://arxiv.org/abs/0811.3531'>arXiv:0811.3531</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <em>A short overview of the “Topological recursion”</em> (<a href='https://arxiv.org/abs/1412.3286'>arXiv:1412.3286</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Ga%C3%ABtan+Borot'>Gaëtan Borot</a>, <em>Lecture notes on topological recursion and geometry</em>, (<a href='https://arxiv.org/abs/1705.09986'>arXiv:1705.09986</a>)</p>
-</li>
-</ul>
-
-<p>A textbook developing various topics related to topological recursion (in particular, discussing the links to enumeration of <a class='existingWikiWord' href='/nlab/show/topological+map'>maps</a>) is</p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <em>Counting Surfaces</em>, CRM Aisenstadt Chair lectures, Progress in Mathematical Physics 70, Birkhäuser, 2016</li>
-</ul>
-
-<p>A series of lectures on topological recursion were delivered by Nicolas Orantin during the Institut Henri Poincaré’s thematic trimester “<a href='http://combi17.math.cnrs.fr'>Combinatorics and interactions</a>”, and are available online:</p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, <em>Topological Recursion</em>, eight-part lecture series, 2017. <a href='https://m.youtube.com/watch?v=qvBfeVLPZpE'>youtube</a> (1/8)</li>
-</ul>
-
-<p>The Kontsevich-Soibelman approach (and much more) is reviewed in</p>
-
-<ul>
-<li id='AndersenBorotChekhovOrantin17'><a class='existingWikiWord' href='/nlab/show/J%C3%B8rgen+Andersen'>Jørgen Andersen</a>, <a class='existingWikiWord' href='/nlab/show/Ga%C3%ABtan+Borot'>Gaëtan Borot</a>, <a class='existingWikiWord' href='/nlab/show/Leonid+Chekhov'>Leonid Chekhov</a>, <a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, <em>The ABCD of topological recursion</em> (<a href='https://arxiv.org/abs/1703.03307'>arXiv:1703.03307</a>)</li>
-</ul>
-
-<h3 id='relation_to_topological_string_and_mirror_symmetry'>Relation to topological string and mirror symmetry</h3>
-
-<p>The relation to the <a class='existingWikiWord' href='/nlab/show/topological+string'>topological string</a> <a class='existingWikiWord' href='/nlab/show/B-model'>B-model</a>, <a class='existingWikiWord' href='/nlab/show/Gromov-Witten+invariants'>Gromov-Witten invariants</a> and <a class='existingWikiWord' href='/nlab/show/mirror+symmetry'>mirror symmetry</a> is due to</p>
-
-<ul>
-<li id='BouchardKlemmMarinoPasquetti09'>
-<p><a class='existingWikiWord' href='/nlab/show/Vincent+Bouchard'>Vincent Bouchard</a>, <a class='existingWikiWord' href='/nlab/show/Albrecht+Klemm'>Albrecht Klemm</a>, <a class='existingWikiWord' href='/nlab/show/Marcos+Mari%C3%B1o'>Marcos Marino</a>, <a class='existingWikiWord' href='/nlab/show/Sara+Pasquetti'>Sara Pasquetti</a>, <em>Remodeling the B-model</em>, Commun.Math.Phys.287:117-178, 2009 (<a href='https://arxiv.org/abs/0709.1453'>arXiv:0709.1453</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <a class='existingWikiWord' href='/nlab/show/Amir-Kian+Kashani-Poor'>Amir-Kian Kashani-Poor</a>, Olivier Marchal, <em>A matrix model for the topological string I: Deriving the matrix model</em> (<a href='https://arxiv.org/abs/1003.1737'>arXiv:1003.1737</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <a class='existingWikiWord' href='/nlab/show/Amir-Kian+Kashani-Poor'>Amir-Kian Kashani-Poor</a>, Olivier Marchal, <em>A matrix model for the topological string II: The spectral curve and mirror geometry</em> (<a href='https://arxiv.org/abs/1007.2194'>arXiv:1007.2194</a>)</p>
-</li>
-
-<li id='EynardOrantin12'>
-<p><a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, <em>Computation of open Gromov-Witten invariants for toric Calabi-Yau 3-folds by topological recursion, a proof of the BKMP conjecture</em> (<a href='https://arxiv.org/abs/1205.1103'>arXiv:1205.1103</a>)</p>
-</li>
-
-<li id='FangLiuZong13'>
-<p>Bohan Fang, Chiu-Chu Melissa Liu, Zhengyu Zong, <em>All Genus Open-Closed Mirror Symmetry for Affine Toric Calabi-Yau 3-Orbifolds</em> (<a href='https://arxiv.org/abs/1310.4818'>arXiv:1310.4818</a>)</p>
-</li>
-</ul>
-
-<p>
-</p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on December 18, 2017 15:03:52 
+  Created on December 18, 2017 15:06:23 
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
   (217.39.117.135)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/topological+recursion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/topological+recursion/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/topological+recursion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/topological+recursion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ga%C3%ABtan+Borot" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/topological+recursion" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Ga%C3%ABtan+Borot" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/topological+recursion" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Ga%C3%ABtan+Borot" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/topological+recursion" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Ga%C3%ABtan+Borot" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
