--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,22 +308,72 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>a representable profunctor <math class='maruku-mathml' display='inline' id='mathml_f393fc1a61cf058a16de0dfce49b0424223f1a32_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi><mo stretchy='false'>(</mo><mo>⊗</mo><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>:</mo><mi>𝒞</mi><mi>⇸</mi><mi>𝒞</mi><mo>⊗</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}(\otimes,1): \mathcal{C} &amp;#8696; \mathcal{C}\otimes \mathcal{C}</annotation></semantics></math>.</p>
-<table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a></th><th><a class='existingWikiWord' href='/nlab/show/Poisson+manifold'>Poisson bracket</a></th><th><a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></th><th><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard propagator</a></th><th><a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/scalar+field'>real scalar field</a></td><td style='text-align: left;'>expl. \ref{PeierlsBracketEistsForScalarFieldAndDiracField}, <br/> expl. \ref{PoissonBracketForRealScalarField}</td><td style='text-align: left;'>prop. \ref{ModeExpansionOfCausalPropagatorForKleinGordonOnMinkowski}</td><td style='text-align: left;'>def. \ref{StandardHadamardDistributionOnMinkowskiSpacetime}</td><td style='text-align: left;'>def. \ref{FeynmanPropagatorForKleinGordonEquationOnMinkowskiSpacetime}</td></tr>
-<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a></td><td style='text-align: left;'>expl. \ref{PeierlsBracketEistsForScalarFieldAndDiracField}, <br/> expl. \ref{PoissonBracketForDiracField}</td><td style='text-align: left;'>prop. \ref{DiracEquationOnMinkowskiSpacetimeAdvancedAndRetardedPropagators}</td><td style='text-align: left;'>def. \ref{HadamardPropagatorForDiracOperatorOnMinkowskiSpacetime}</td><td style='text-align: left;'>def. \ref{FeynmanPropagatorForDiracOperatorOnMinkowskiSpacetime}</td></tr>
-<tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a></td><td style='text-align: left;'></td><td style='text-align: left;'>prop. \ref{PhotonPropagatorInGaussianAveragedLorenzGauge}</td><td style='text-align: left;'></td><td style='text-align: left;'>prop. \ref{PhotonPropagatorInGaussianAveragedLorenzGauge}</td></tr>
-</tbody></table>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_500949a1b073c4d0fe5805a0908aaef6f2f3c66b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mrow><mo>(</mo><mi>f</mi><msub><mo>⋆</mo> <mi>ω</mi></msub><mi>g</mi><mo>)</mo></mrow><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup></mrow></mfrac><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup></mrow></mfrac><mo>∫</mo><mo>∫</mo><munder><mrow><msup><mi>e</mi> <mrow><mi>i</mi><mi>ℏ</mi><msup><mi>ω</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>(</mo><mi>k</mi><mo>,</mo><mi>q</mi><mo stretchy='false'>)</mo></mrow></msup></mrow><mo>⏟</mo></munder><munder><mrow><msup><mi>e</mi> <mrow><mi>i</mi><mi>k</mi><mo>⋅</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></msup><mi>f</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow><mo>⏟</mo></munder><munder><mrow><msup><mi>e</mi> <mrow><mi>i</mi><mi>q</mi><mo>⋅</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo></mrow></msup><mi>g</mi><mo stretchy='false'>(</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo></mrow><mo>⏟</mo></munder><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>k</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>q</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>y</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup></mrow></mfrac><mo>∫</mo><mi>δ</mi><mrow><mo>(</mo><mi>x</mi><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo>+</mo><mi>ℏ</mi><msup><mi>ω</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><msup><mi>e</mi> <mrow><mi>i</mi><mi>k</mi><mo>⋅</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></msup><mi>f</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mi>g</mi><mo stretchy='false'>(</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo><mi>\</mi><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>k</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>y</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mrow><mo stretchy='false'>(</mo><mi>det</mi><mo stretchy='false'>(</mo><mi>ω</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mo stretchy='false'>)</mo></mrow><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><mi>ℏ</mi><msup><mo stretchy='false'>)</mo> <mrow><mn>2</mn><mi>n</mi></mrow></msup></mrow></mfrac><mo>∫</mo><msup><mi>e</mi> <mrow><mi>i</mi><mi>ω</mi><mo stretchy='false'>(</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo><mo>,</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow></msup><mi>f</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mi>g</mi><mo stretchy='false'>(</mo><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mi>y</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mover><mi>y</mi><mo stretchy='false'>˜</mo></mover></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+  \left(f \star_\omega g\right)(x)
+  &amp; =
+  \frac{1}{(2 \pi)^{2n}}
+  \frac{1}{(2 \pi)^{2n}}
+  \int
+  \int
+    \underbrace{
+      e^{ i \hbar \omega^{-1}(k,q) }
+    }
+    \underbrace{
+      e^{i k \cdot (x-y)}
+      f(y)
+    }
+    \underbrace{
+      e^{i q \cdot (x- \tilde y)}
+      g(\tilde y)
+    }
+   \,
+   d^{2 n} k
+   \,
+   d^{2 n} q
+   \,
+   d^{2 n} y
+   \,
+   d^{2 n} \tilde y
+   \\
+   &amp; =
+  \frac{1}{(2 \pi)^{2n}}
+  \int
+    \delta\left( x - \tilde y + \hbar \omega^{-1}(k) \right)
+    e^{i k \cdot (x-y)}
+    f(y)
+    g(\tilde y)
+   \
+   d^{2 n} k
+   \,
+   d^{2 n} y
+   \,
+   d^{2 n} \tilde y
+   \\
+   &amp;= 
+  \frac{(det(\omega)^{2n})}{(2 \pi \hbar)^{2n} }
+  \int
+    e^{i \omega((x - \tilde y),(x-y))}
+    f(y)
+    g(\tilde y)
+   \,
+   d^{2 n} y
+   \,
+   d^{2 n} \tilde y
+  \end{aligned}
+
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on December 18, 2017 20:35:44 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
-  (37.235.48.135)
+  Revised on December 19, 2017 09:56:16 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1368" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1368 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1369" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1369 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
